2011-02-18  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/ui/icon.py:
    Removing IconEntry to use new gtk api.

=== 1.9.27 ===
2010-09-01  Ronaldo Maia  <romaia@async.com.br>

	Release 1.9.27

2010-07-27 Gabriel Gerga <gerga@async.com.br>

    reviewed by: romaia@async.com.br

    * kiwi/ui/search.py: Create method set_digits that control number
    of decimal places in the NumberSearchFilter. Display 2 digits for
    Decimal and currency, and 0 for int.

2010-07-22  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/ui/objectlist.py: Remove obsolete gtk.Tooltips

=== 1.9.26-2 ===
2009-12-15 George Y. Kussumoto <george@async.com.br>

	Bugfix Release 1.9.26-2

2009-12-11 George Y. Kussumoto <george@async.com.br>

	* kiwi/ui/entry.py: Added a workaround for set_text method in KiwiEntry
	when using gtk > 2.18.

=== 1.9.26 ===
2009-07-14 George Y. Kussumoto <george@async.com.br>

	Release 1.9.26

2009-07-01  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: george@async.com.br

	* kiwi/ui/objectlist.py: Enable custom sort_func for objectlists

2009-06-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: george@async.com.br

	* kiwi/ui/search.py: Update search if entry activates and enable decimal
                         digits for number searching.

2009-06-17 George Y. Kussumoto <george@async.com.br>
	reviewed by: romaia@async.com.br

	* kiwi/ui/views.py: Added enable_window_controls in SlaveView. (#3866:
	Possibilitar a maximização das telas no processo de compras).

2009-06-05  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/ui/search.py: Fix: update callsite after bugfix 3981.

2009-06-01  Ronaldo Maia  <romaia@async.com.br>

	* kiwi/test/test_datatypes.py: Fix sv_SE thousand separators.

=== 1.9.25 ===
2009-04-15 George Y. Kussumoto <george@async.com.br>

	Release 1.9.25

2009-04-14: Severin Heiniger <severinheiniger@gmail.com>
	reviewed by: jdahlin@async.com.br

	* kiwi/dist.py: Do not overwrite custom cmdclass entries.
